--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "homepage": "https://github.com/Sutauruki/Satauruki_md#readme",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.7.16",
+    "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "baileys": "^6.7.16",
     "dotenv": "^16.4.7",
