--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MEGA_EMAIL=YOUR_MEGA_EMAIL
-MEGA_PASSWORD=YOUR_MEGA_PASSWORD
+MEGA_EMAIL=nadeenpoorna100@gmail.com
+MEGA_PASSWORD=Nadeen@123
 # GET CREDENTIALS BY CREATING A MEGA ACCOUNT
 # https://mega.nz
